k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sre-demo
  namespace: sre-lab
spec:
  selector:
    app: sre-demo
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
